--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,12 +1,12 @@
 spring:
  datasource:
    driver-class-name: com.mysql.cj.jdbc.Driver
-   url: jdbc:mysql://trainingdb.ck1ayq0lncmp.ap-south-1.rds.amazonaws.com:3306/charityapp_content_db
-   username: katherin
-   password: katherin
+   url: jdbc:mysql://prod-charityapp-content.cwnjiz1ppgaw.ap-south-1.rds.amazonaws.com:3306/charityapp_content_db
+   username: dev_user
+   password: dev_user
    
  flyway:
    driver-class-name: com.mysql.cj.jdbc.Driver
-   url: jdbc:mysql://trainingdb.ck1ayq0lncmp.ap-south-1.rds.amazonaws.com:3306/charityapp_content_db
-   username: katherin
-   password: katherin
+   url: jdbc:mysql://prod-charityapp-content.cwnjiz1ppgaw.ap-south-1.rds.amazonaws.com:3306/charityapp_content_db
+   username: dev_user
+   password: dev_user
