--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,12 +1,13 @@
 spring:
  datasource:
    driver-class-name: com.mysql.cj.jdbc.Driver
-   url: jdbc:mysql://prod-charityapp-content.cwnjiz1ppgaw.ap-south-1.rds.amazonaws.com:3306/charityapp_content_db
+   url: jdbc:mysql://devdb.charityapp.in:3306/charityapp_content_db
    username: dev_user
    password: dev_user
    
- flyway:
-   driver-class-name: com.mysql.cj.jdbc.Driver
-   url: jdbc:mysql://prod-charityapp-content.cwnjiz1ppgaw.ap-south-1.rds.amazonaws.com:3306/charityapp_content_db
-   username: dev_user
-   password: dev_user
+   
+   flyway:
+     driver-class-name: com.mysql.cj.jdbc.Driver
+     url: jdbc:mysql://devdb.charityapp.in:3306/charityapp_content_db
+     username: dev_user
+     password: dev_user
