--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,13 +1,13 @@
 spring:
  datasource:
    driver-class-name: com.mysql.cj.jdbc.Driver
-   url: jdbc:mysql://prod-charityapp-content.cwnjiz1ppgaw.ap-south-1.rds.amazonaws.com:3306/charityapp_content_db
-   username: dev_user
-   password: dev_user
+   url: jdbc:mysql://db.charityapp.in:3306/charityapp_content_db
+   username: prod_user
+   password: prod_user
    
    
    flyway:
      driver-class-name: com.mysql.cj.jdbc.Driver
-     url: jdbc:mysql://prod-charityapp-content.cwnjiz1ppgaw.ap-south-1.rds.amazonaws.com:3306/charityapp_content_db
-     username: dev_user
-     password: dev_user
+     url: jdbc:mysql://db.charityapp.in:3306/charityapp_content_db
+     username: prod_user
+     password: prod_user
